src/objects/Presupuesto__c.object
<CustomObject>
    <description>Representa cada uno de los presupuestos generados para un caso.</description>
    <fields>
        <fullName>PRE_LKP_Caso__c</fullName>
        <description>Caso al que se vincula el Comentario. Representa la FK al objeto Case. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Case (Case.CAS_TXT_Identificador__c).</description>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Presupuestos</relationshipLabel>
        <relationshipName>Presupuestos_Valoraciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PRE_NUM_Version__c</fullName>
        <description>Versión.</description>
        <label>Versión</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Importe_Total_Cia_AI__c</fullName>
        <description>Representa el sumatorio del campo &quot;Facturación a Compañía antes de impuestos&quot; de Línea de Presupuesto</description>
        <label>Importe Total Facturar Cía antes imp</label>
        <summarizedField>Linea_Presupuesto__c.PREL_DIV_Cargar_Comp_AI__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Importe_Total_Cia_DI__c</fullName>
        <description>Representa el sumatorio del campo &quot;Facturación a Compañía después de impuestos&quot; de Línea de Presupuesto</description>
        <label>Importe Total Facturar Cía después imp</label>
        <summarizedField>Linea_Presupuesto__c.PREL_DIV_Cargar_Comp_DI__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Importe_Total_Cliente_AI__c</fullName>
        <description>Representa el sumatorio del campo &quot;Facturación a Cliente antes de impuestos&quot; de Línea de Presupuesto</description>
        <label>Importe Total Facturar Cliente antes imp</label>
        <summarizedField>Linea_Presupuesto__c.PREL_DIV_Cargar_Cliente_AI__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Importe_Total_Cliente_DI__c</fullName>
        <description>Representa el sumatorio del campo &quot;Facturación a Cliente después de impuestos&quot; de Línea de Presupuesto</description>
        <label>Importe Total Facturar Cliente desp imp</label>
        <summarizedField>Linea_Presupuesto__c.PREL_DIV_Cargar_Cliente_DI__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Importe_Total_DI__c</fullName>
        <description>Representa el sumatorio del campo &quot;Facturación Total después de impuestos&quot; de Línea de Presupuesto</description>
        <label>Importe Total Facturar después impuestos</label>
        <summarizedField>Linea_Presupuesto__c.PREL_DIV_Facturacion_Total_DI__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Importe_total__c</fullName>
        <description>Sumatorio del importe de todas las líneas de presupuesto</description>
        <label>Importe Total Facturar antes impuestos</label>
        <summarizedField>Linea_Presupuesto__c.PREL_DIV_Facturacion_Total_AI__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_RES_Porcentaje_Imp_Cia_Cliente__c</fullName>
        <description>Representa el porcentaje de impuestos aplicados a la Cia/Cliente del campo &quot;Porcentaje impuestos aplicado a Compañía/Cliente&quot; de Línea de Presupuesto</description>
        <label>Porcentaje Impuestos Cliente/Compañía</label>
        <summarizedField>Linea_Presupuesto__c.PREL_POR_Impuesto_Cliente__c</summarizedField>
        <summaryForeignKey>Linea_Presupuesto__c.PREL_LKP_Presupuesto__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRE_SEL_Estado_Anterior__c</fullName>
        <description>Guarda el estado anterior.</description>
        <label>Estado Anterior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Presupuesto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE_SEL_Estado__c</fullName>
        <description>Estado del presupuesto.</description>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Presupuesto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE_SEL_Motivo_Rechazo__c</fullName>
        <description>Campo que recoge el motivo del rechazo del presupuesto</description>
        <label>Motivo Rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Motivo_rechazo_presupuesto</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRE_TXT_Identificador__c</fullName>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PRE_TXT_MotivoAprobacion__c</fullName>
        <label>Motivo Aprobacion o Rechazo</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Presupuesto</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nº de Presupuesto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presupuestos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(PRE_TXT_Identificador__c ))),ISCHANGED(PRE_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(PRE_TXT_Identificador__c),ISNULL( PRE_TXT_Identificador__c))</errorConditionFormula>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
</CustomObject>